# firmware

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: test.yml
addons/: ble.yml  tcp.yml  wifi.yml
apps/ble_wifi_bridge/: local.conf.example  prj.conf
apps/crash_debug/: CMakeLists.txt  prj.conf  prj_rtt_only.conf
apps/crash_debug/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
apps/crash_debug/src/: main.c
apps/hello_world/: manifest.yml  prj.conf
apps/hello_world/.cache/clangd/index/: main.c.E943A672D4BBF0A2.idx
apps/hello_world/src/: main.c
esp-idf/osal_tests/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-idf/osal_tests/main/: CMakeLists.txt  main.c
esp-idf/wifi_prov_tests/: CMakeLists.txt  sdkconfig.defaults
esp-idf/wifi_prov_tests/components/eai_log/: CMakeLists.txt
esp-idf/wifi_prov_tests/components/eai_settings/: CMakeLists.txt
esp-idf/wifi_prov_tests/components/wifi_prov_common/: CMakeLists.txt
esp-idf/wifi_prov_tests/components/wifi_prov_cred/: CMakeLists.txt
esp-idf/wifi_prov_tests/main/: CMakeLists.txt  main.c
esp-idf/wifi_provision/: CLAUDE.md
esp-idf/wifi_provision/components/eai_ble/: CMakeLists.txt
esp-idf/wifi_provision/components/eai_wifi/: CMakeLists.txt
esp-idf/wifi_provision/components/wifi_prov_common/: CMakeLists.txt
esp-idf/wifi_provision/components/wifi_prov_esp/: wifi_prov_cred_esp.c
esp-idf/wifi_provision/main/: CMakeLists.txt
lib/: CMakeLists.txt  Kconfig
lib/crash_log/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/crash_log/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
lib/crash_log/conf/: debug_base.conf  debug_coredump.conf  debug_coredump_flash.conf
lib/crash_log/include/: crash_log.h
lib/crash_log/src/: crash_log.c  crash_log_shell.c
lib/crash_log/tests/: CMakeLists.txt
lib/debug_config/: CLAUDE.md  debug_coredump.conf  debug_coredump_flash.conf
lib/device_shell/: CLAUDE.md  CMakeLists.txt  Kconfig  device_shell.conf
lib/device_shell/src/: device_shell.c
lib/device_shell/tests/: CMakeLists.txt
lib/eai_audio/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/eai_audio/include/eai_audio/: eai_audio.h  gain.h  port.h  route.h  stream.h  types.h
lib/eai_audio/src/: mixer.c  mixer.h
lib/eai_audio/src/posix/: audio.c  types.h
lib/eai_audio/tests/native/: CMakeLists.txt  main.c  mixer_tests.c
lib/eai_display/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/eai_display/include/eai_display/: device.h  eai_display.h  layer.h  property.h  types.h
lib/eai_display/src/posix/: display.c  types.h
lib/eai_display/src/zephyr/: types.h
lib/eai_display/tests/native/: CMakeLists.txt  main.c
lib/eai_input/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/eai_input/include/eai_input/: device.h  eai_input.h  event.h  types.h
lib/eai_input/src/posix/: input.c  types.h
lib/eai_input/src/zephyr/: types.h
lib/eai_input/tests/native/: CMakeLists.txt  main.c
lib/eai_ipc/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_ipc/include/eai_ipc/: eai_ipc.h
lib/eai_ipc/src/loopback/: ipc.c
lib/eai_ipc/src/zephyr/: ipc.c
lib/eai_ipc/tests/: CMakeLists.txt  compile_commands.json  prj.conf  testcase.yaml
lib/eai_ipc/tests/native/: CMakeLists.txt  main.c
lib/eai_ipc/tests/src/: main.c
lib/eai_osal/include/eai_osal/: types.h
lib/eai_osal/src/freertos/: critical.c  event.c  internal.h  mutex.c  queue.c  semaphore.c  thread.c  time.c  timer.c  types.h  workqueue.c
lib/eai_sensor/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/eai_sensor/include/eai_sensor/: device.h  eai_sensor.h  session.h  types.h
lib/eai_sensor/src/posix/: sensor.c  types.h
lib/eai_sensor/src/zephyr/: types.h
lib/eai_sensor/tests/native/: CMakeLists.txt  main.c
lib/wifi_prov/: CLAUDE.md  CMakeLists.txt  Kconfig
lib/wifi_prov/src/: wifi_prov.c  wifi_prov_ble.c  wifi_prov_cred.c  wifi_prov_msg.c  wifi_prov_sm.c  wifi_prov_wifi.c
lib/wifi_prov/tests/: prj.conf
linux/: README.md
linux/alif-e7/: LEARNINGS.md  README.md  build-tfa.sh  flash-ospi-usb.sh  make-ospi-image.sh  stage-ospi.sh  xmodem-send.py
linux/alif-e7/setools/: NOT_USED_BY_MCP.md  README.md  alif-flash.py  flash-e7.sh  linux-boot-e7-ospi-jlink.json  linux-boot-e7-ospi-usbflash.json  linux-boot-e7-ospi.json  linux-boot-e7.json  xipImage-ospi
linux/alif-e8/: build-tfa.sh
linux/alif-e8/setools/: app-device-config.json
linux/apps/: Makefile
linux/apps/display_test/: Makefile  main.c
linux/apps/hello/: Makefile  main.c
linux/apps/rpmsg_echo/: Makefile  main.c
linux/docker/: Dockerfile  Dockerfile.alif-e7  Dockerfile.picoclaw  docker-entrypoint-picoclaw.sh
linux/picoclaw/: README.md  build-picoclaw.sh
linux/yocto/: Dockerfile
linux/yocto/meta-eai/conf/machine/: appkit-e7.conf  appkit-e8.conf
linux/yocto/meta-eai/recipes-apps/picoclaw/: picoclaw-bin_1.0.bb
linux/yocto/meta-eai/recipes-apps/picoclaw/files/: .gitignore  IDENTITY.md  SOUL.md  config.json  picoclaw-init
linux/yocto/meta-eai/recipes-connectivity/usb-ecm/files/: usb-ecm.sh
linux/yocto/meta-eai/recipes-core/busybox/: busybox-inittab_%.bbappend  busybox_%.bbappend
linux/yocto/meta-eai/recipes-core/busybox/files/: inittab  switch_root.cfg
linux/yocto/meta-eai/recipes-core/overlayfs-dev/: overlayfs-dev_1.0.bb
linux/yocto/meta-eai/recipes-core/overlayfs-dev/files/: overlayfs-dev-init  preinit
linux/yocto/meta-eai/recipes-devtools/android-tools/: android-tools_%.bbappend
linux/yocto/meta-eai/recipes-devtools/android-tools/files/: adb_auth_client_stub.c
linux/yocto/meta-eai/recipes-kernel/linux/: linux-alif_%.bbappend
linux/yocto/meta-eai/recipes-kernel/linux/files/: 0001-arm-dts-alif-add-appkit-e7-board-support.patch  0002-usb-dwc3-ensemble-devm_clk_get_optional.patch  0003-arm-dts-alif-appkit-e8-mram-boot-workarounds.patch  console-debug.cfg  display-drm.cfg  jffs2.cfg  mtd-physmap-e8.cfg  virt-ext.cfg
scripts/: new-app.sh
tests/lib/crash_log/: CMakeLists.txt
tests/lib/device_shell/: CMakeLists.txt
zephyr/: module.yml
